fix center align

--- a/static/scss/components/_payment-card.scss
+++ b/static/scss/components/_payment-card.scss
@@ -4,6 +4,8 @@
     padding: $spacer * 6;
     text-align: center;
     background-color: $white;
+    width: 250px;
+    margin: 10px;
     
     img {
         align-items: center;
@@ -21,7 +23,7 @@
     &__priсe {
         margin-top: 14%;
         margin-bottom: 14%;
-        margin-left: 17%;
+        // margin-left: 17%;
         font-size: $font-size-xxl;
         span {
             vertical-align: top;
@@ -33,6 +35,11 @@
             color: $danger;
             font-size: medium;
 
+        }
+        &_custom {
+            font-size: $font-size-base * 1.2;
+            font-weight: 600;
+            color: #00316D;
         }
     }
 
@@ -49,10 +56,34 @@
     }
 }
 
+.payment-card_custom {
+    display: block;
+}
+
 .without-vat {
     color: white;
     display: flex;
     flex-direction: row-reverse;
     padding-top: 1%;
     font-size: 15px;
+}
+
+#payment-box {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    
+    @media screen and (min-width: $xl) {
+        flex-direction: row;
+    }
+}
+
+.payment {
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+
+    @media screen and (min-width: $xl) {
+        flex-direction: row;
+    }
 }
